[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "gpu-keeper"
version = "0.1.0"
description = "GPU utilization keeper - maintains GPU util at ~100% with automatic monitoring and restart"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "torch",
    "nvidia-ml-py",
    "pyyaml",
    "numpy>=2.4.2",
]

[project.scripts]
gpu-keeper = "gpu_keeper.main:run"

[tool.uv]
package = true
